--- a/security/style.css
+++ b/security/style.css
@@ -6,6 +6,7 @@ img {
 
 body {
 	font-family: Georgia;
+	margin-left: 3%
 }
 
 h4 {
@@ -18,8 +19,13 @@ h1 {
 
 li {
 	margin-right: 5%;
+	padding-bottom: 6px;
 }
 
 p {
 	margin-right: 5%;
+}
+
+.subheading {
+	font-weight: bold;
 }
